--- a/adaptive.css
+++ b/adaptive.css
@@ -1,13 +1,13 @@
 
-@media only screen and (max-width: 1200px){
+@media only screen and (max-width: 770px){
 
 	header{
-		padding-bottom: 200px;
+		padding-bottom: 235px;
 	}
 
 	.up-line{
-		width: 90%;
-		margin-left: 5%;
+		width: 88%;
+		margin-left: 6%;
 	}
 
 	.content{
@@ -16,31 +16,51 @@
 	}
 
 	.works{
-		margin-left: 20px;
-		margin-right: 20px;
+		margin-left: 10px;
+		margin-right: 10px;
+	}
+
+	.works__card{
+		padding-top: 190px;
+	}
+
+	.card2{
+		padding-top: 240px;
 	}
 
 	.partners{
 		grid-template-columns: 1fr 1fr;
-		width: 60%;
-		margin-left: 20%;
+		width: 62%;
+		margin-left: 19%;
+		grid-row-gap: 60px;
+		margin-bottom: 25px;
 	}
 
 	.ideas{
-		margin-left: 20px;
-		margin-right: 20px;
+		margin-left: 10px;
+		margin-right: 10px;
 	}
 
 	.down{
 		width: 90%;
 		margin-left: 5%;
 	}
+
+	.right{
+		margin-left: -50px;
+	}
 }
 
-@media only screen and (max-width: 750px){
+@media only screen and (max-width: 330px){
+
+	header{
+		padding-top: 20px;
+		padding-bottom: 140px;
+	}
+
 	.up-line{
 		flex-direction: column;
-		margin-bottom: 150px;
+		margin-bottom: 115px;
 	}
 	.desktop{
 		display: none;
@@ -48,33 +68,68 @@
 
 	.mobile{
 		display: block;
+		font-size: 18px;
+		letter-spacing: 2px;
 	}
 
 	.center .red-btn{
 		width: 90%;
-		font-size: 20px;
+		font-size: 12px;
+	}
+
+	.center h1{
+		font-size: 30px;
+	}
+
+	.center h5{
+		margin-top: 15px;
+		font-size: 15px;
+		width: 60%;
+		margin-left: 20%;
+		margin-bottom: 20px;
+	}
+
+	.content{
+		margin-top: 30px;
 	}
 
 	.works{
 		grid-template-columns: 1fr;
+		margin-top: 15px;
+		margin-bottom: 35px;
+	}
+
+	.works__card{
+		padding-top: 70px;
 	}
 
 	.partners{
 		grid-template-columns: 1fr;
+		margin-top: 20px;
+		grid-row-gap: 20px;
+	}
+
+	.white-btn{
+		width: 90%;
+	}
+
+	.h1-ideas{
+		margin-top: 30px;
 	}
 
 	.ideas{
 		grid-template-columns: 1fr;
+		margin-bottom: 20px;
 	}
 
 	.ideas__card1,.ideas__card2,.ideas__card3,.ideas__card4,.ideas__card5,
 	.ideas__card6,.ideas__card7{
 		grid-column: 1/-1;
-		padding: 70px 0;
+		height: 120px;
 	}
 
 	.h3-hi{
-		margin: 20px 0;
+		margin: 10px 0;
 	}
 
 	.form{
@@ -96,7 +151,17 @@
 		width: 100%;
 		margin-left: 0;
 		flex-direction: column;
+		display: flex;
 		text-align: center;
+		justify-content: center;
+	}
+
+	.left{
+		flex-direction: column;
+	}
+
+	.right{
+		margin: 0;
 	}
 
 	.down__part__flex{
@@ -111,6 +176,10 @@
 	.down__part{
 		margin-bottom: 10px;
 		margin-top: 10px;
+		margin-left: 0;
+	}
+	.design{
+		text-align: center;
 	}
 
 }
